# car_price_prediction

./: 15d5adf9-246c-4b56-a6a8-43d94bd8231e.ipynb  README.md  pyproject.toml
