[project]
name = "car-price-prediction"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11, <3.13"
dependencies = [
    "jupyter>=1.1.1",
    "lightgbm>=4.6.0",
    "matplotlib>=3.10.1",
    "notebook>=7.4.1",
    "optuna-integration>=4.3.0",
    "pandas>=2.2.3",
    "phik>=0.12.4",
    "scikit-learn>=1.6.1",
    "seaborn>=0.13.2",
    "shap>=0.47.2",
]
